--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -10,7 +10,12 @@
   
     height: 80vh;
     min-height: 35rem;
-    background-color: rgb(255, 253, 247);
+    /* background-color: rgb(0, 0, 0); */
+    background: url("../public/images/800pxunionterminal.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
   
     overflow: hidden;
   }
@@ -26,8 +31,8 @@
     align-items: center;
     justify-content: center;
   
-    background-color: rgba(255, 253, 247, 0.5);
-    box-shadow: 0 0 10px 10px rgba(255, 253, 247, 0.5);
+    /* background-color: rgba(255, 253, 247, 0.5); */
+    /* box-shadow: 0 0 10px 10px rgba(255, 253, 247, 0.5); */
     border-radius: 3rem;
     padding: 2rem;
     height: 24rem;
@@ -48,6 +53,7 @@
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
     bottom: 0;
+    color: white;
     
   }
   
